# High-Performance-LLM-Inference-Server-in-Rust

./: .gitignore  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  config.example.toml  docker-compose.yml  prometheus.yml  run-demo.sh
server/: Cargo.toml
server/benches/: inference_bench.rs
server/src/: config.rs  error.rs  main.rs
server/src/api/: handlers.rs  mod.rs  models.rs
server/src/batch/: mod.rs
server/src/inference/: generator.rs  mod.rs  sampler.rs
server/src/metrics/: mod.rs
server/src/model/: loader.rs  mod.rs  tokenizer.rs
